# mdx-mcp

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
mdx_mcp/: __init__.py  _xmla.py  executor.py  introspect.py  llm.py  producer.py  server.py  verify.py
persona/: cube_analyst.md
skills/ask-the-cube/: SKILL.md
skills/explain-mdx/: SKILL.md
skills/explore-cube/: SKILL.md
tests/: adventureworks_xmla_server.py  test_executor.py  test_executor_cells.py  test_integration_xmla.py  test_introspect.py  test_producer.py  test_server.py  test_verify.py  test_verify_cells.py  test_xmla.py
