[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdx-mcp"
version = "0.1.0"
description = "An open-source, verified natural-language → MDX MCP server for OLAP cubes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "mdx-mcp contributors" }]
keywords = ["mcp", "mdx", "olap", "ssas", "xmla", "cube", "nl2mdx", "analytics", "claude"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Database :: Front-Ends",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# XMLA executor + introspection use only the stdlib. The MCP server needs `mcp`.
dependencies = ["mcp>=1.2.0"]

[project.optional-dependencies]
claude = ["anthropic>=0.40.0"]
dev = ["pytest>=8.0"]

[project.scripts]
mdx-mcp = "mdx_mcp.server:main"

[project.urls]
Homepage = "https://github.com/tghanchidnx/mdx-mcp"
Source = "https://github.com/tghanchidnx/mdx-mcp"

[tool.hatch.build.targets.wheel]
packages = ["mdx_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
